package com.shengsiyuan.dp.proxy.dynamic;

public interface ITeacherDao {

    void teach();

    void sayHello(String name);
}
